수정사항 --> 시작하기 버튼 위치 수정

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<!DOCTYPE>
+<html class="gr__hayeanwoo_github_io"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
 
 <style type="text/css">
@@ -15,14 +14,14 @@ z-index: 6;
 
 #start
 img{position:absolute;
-lefr : 100px;
-top : 100px;
+left : 100;
+top : 100;
 }
 
 </style>
 </head>
 
-<body style="margin:0px; border:0px; padding:0px">
+<body style="margin:0px; border:0px; padding:0px" data-gr-c-s-loaded="true">
 
 <div class="background" style=" padding:0px 0px; border: 0; outline 0">
 <img src="https://postfiles.pstatic.net/MjAxOTA1MzBfMjQ3/MDAxNTU5MjAxMzA5MDQ5.0FJY4Ki8BSEGJ-536nNagdxiGyw1nyp0fmS-l8uQMPkg.a25Xdmwd8k7PFz5oPIGwp4yEXOChZPg6Cp3kY0Ok1_8g.JPEG.hiu2332/startpage.jpg?type=w966" style=" padding:0px 0px; border: 0; outline 0">
@@ -30,10 +29,11 @@ top : 100px;
 
 
 
-<div style="position:absolute; width:200px; height:30px; top:520px; left:180;border: 0; outline: 0;" class="start">
+<div class="start" style="position:absolute; width:200px; height:30px; top:530px; left:250px; border: 0; outline: 0;">
 
 <button type="button" style=" border-radius:0.5em; padding:0px 0px; border: 0; outline 0;" onclick="location.href='https://editor.p5js.org/kimjunghyun/full/5BGoIk4qs' "><img src="https://postfiles.pstatic.net/MjAxOTA2MTJfMjAx/MDAxNTYwMzA5ODE1Njk0.0rNkqSOdpIL0IbX-SpVhsXTcs9CP2H9a3PlAxBm_6B4g.x4U9wCgWVqMdptSyM6WNFkISz7_r599kttKUrJAZqMIg.PNG.hiu2332/NewStart.png?type=w966" alt="start" style="width:440px;height:160px"></button>
 
 </div>
+
 
 </body></html>
